updated functionality, added Rosie's Recipes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </header>
 
-    <div id=pageContent></div>
+    <div id=pageContent><p>If you're seeing this, the JavaScript broke.</p></div>
     <div class='container' id='contact'>
         <h2>Contact Info</h2>
         <p><iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:24ruB5NHLwPYyfBjc0z8ju&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe><a href="https://twitter.com/argentumangel?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow me on Twitter!</a>
